--- a/code.html
+++ b/code.html
@@ -51,7 +51,7 @@ https://gist-it.appspot.com/github/bmuellerhstat/website-portfolio-example/raw/m
                 <script src="https://gist-it.appspot.com/github/xiurongy3506/css3-project/raw/master/index.html?footer=0"></script>
             </div>
             <div id="style" class="tab-pane fade">
-                <script src="https://gist-it.appspot.com/github/xiurongy3506/css3-project/raw/master/index.html?footer=0"></script>
+                <script src="https://gist-it.appspot.com/github/xiurongy3506/css3-project/raw/master/style.css?footer=0"></script>
             </div>
         </div>
     </div>
